fixed text overlapping filters side bar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -67,7 +67,7 @@
 
  .video-description {
    height: 190px;
-   width: 800px;
+   width: 550px;
  }
 
  .video-container{
